--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,6 +20,9 @@
         </div>
     </div>
 </header>
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success" role="alert">{{ message }}</div>
+{% endfor %}
 <!-- Features section-->
 <section class="py-5 border-bottom" id="features">
     <div class="container px-5 my-5">
