--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,9 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href= "{{ path('app_tricks_index')}}">Tricks</a></li>
+                        <li class="nav-item"><a class="nav-link" href= "{{ path('app_logout')}}">Déconnexion</a></li>
+                        <li class="nav-item"><a class="nav-link" href= "{{ path('app_login')}}">Connexion</a></li>
+                        <li class="nav-item"><a class="nav-link" href= "{{ path('app_register')}}">Inscription</a></li>
                     </ul>
                 </div>
             </div>
