--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Categorie index{% endblock %}
 
 {% block body %}
-    <h1>Categorie index</h1>
+    <br>
+    <h1 class="text-center">Categorie index</h1>
+    <br>
 
     <table class="table">
         <thead>
@@ -19,8 +21,8 @@
                 <td>{{ categorie.id }}</td>
                 <td>{{ categorie.libelle }}</td>
                 <td>
-                    <a href="{{ path('app_categorie_show', {'id': categorie.id}) }}">show</a>
-                    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
+                    <a class="btn btn-outline-primary" href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Voir</a>
+                    <a class="btn btn-outline-secondary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -31,5 +33,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_new') }}">Create new</a>
+    <a class="btn btn-outline-success" href="{{ path('app_categorie_new') }}">Créer une nouvelle catégorie</a>
+    <br><br>
 {% endblock %}
