--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Commentaire index{% endblock %}
 
 {% block body %}
-    <h1>Commentaire index</h1>
+    <br>
+    <h1 class="text-center">Commentaire index</h1>
 
     <table class="table">
         <thead>
@@ -21,8 +22,8 @@
                 <td>{{ commentaire.commentaire }}</td>
                 <td>{{ commentaire.date ? commentaire.date|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_commentaire_show', {'id': commentaire.id}) }}">show</a>
-                    <a href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}">edit</a>
+                    <a class="btn btn-outline-primary" href="{{ path('app_commentaire_show', {'id': commentaire.id}) }}">Voir</a>
+                    <a class="btn btn-outline-secondary" href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -33,5 +34,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_commentaire_new') }}">Create new</a>
+    <a class="btn btn-outline-success" href="{{ path('app_commentaire_new') }}">Create new</a>
+    <br><br>
 {% endblock %}
