--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,10 +3,20 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
+<div class="container">
+    <br>
     <h1>Reset your password</h1>
 
     {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
+        <div>
+            {{ form_row(resetForm.plainPassword, {
+                'attr':{'class':'form-control'}
+            }) }}
+        </div>
+        <br>
         <button class="btn btn-primary">Reset password</button>
+        <br>
     {{ form_end(resetForm) }}
+    <br><br>
+</div>
 {% endblock %}
