--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -3,9 +3,14 @@
 {% block title %}New Categorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Categorie</h1>
+    <br>
+    <div class="container">
+    <br>
+        <h1 class="text-center">Créer une nouvelle Catégorie</h1>
 
-    {{ include('categorie/_form.html.twig') }}
+        {{ include('categorie/_form.html.twig') }}
 
-    <a href="{{ path('app_categorie_index') }}">back to list</a>
+        <a class="btn btn-outline-secondary" href="{{ path('app_categorie_index') }}">Retour à la liste</a>
+    </div>
+    <br>
 {% endblock %}
