--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -18,9 +18,10 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_index') }}">back to list</a>
+    <a class="btn btn-outline-secondary" href="{{ path('app_categorie_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 
-    {{ include('categorie/_delete_form.html.twig') }}
+    <a{{ include('categorie/_delete_form.html.twig') }}</a>
+    <br><br>
 {% endblock %}
