--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,17 +7,38 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.nom) }}
-        {{ form_row(registrationForm.prenom) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+    <div class="container">
+        <br>
+        <h1 class="text-center">Inscription</h1>
+        {{ form_start(registrationForm) }}
+        <div>
+            {{ form_row(registrationForm.nom, {
+                'attr':{'class':'form-control'}
+            }) }}
+        </div>
+        <div>
+            {{ form_row(registrationForm.prenom, {
+                'attr':{'class':'form-control'}
+            }) }}
+        </div>
+        <div>
+            {{ form_row(registrationForm.email, {
+                'attr':{'class':'form-control'}
+            }) }}
+        </div>
+        <div>
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Password',
+                'attr':{'class':'form-control'}
+            }) }}
+        </div>
+        <div>
+            {{ form_row(registrationForm.agreeTerms) }}
+        </div>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button type="submit" class="btn btn-outline-success">Register</button>
+        </div>
+        <br>
+        {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
