--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -6,17 +6,24 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <div class="container">
+        <h1 class="text-center">Reset your password</h1>
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
+        {{ form_start(requestForm) }}
         <div>
-            <small>
-                Enter your email address and we will send you a
-                link to reset your password.
-            </small>
+            {{ form_row(requestForm.email, {
+                'attr':{'class':'form-control'}
+            }) }}
         </div>
-
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+            <div>
+                <small>
+                    Enter your email address and we will send you a
+                    link to reset your password.
+                </small>
+            </div>
+            <br>
+            <button class="btn btn-primary">Send password reset email</button>
+            <br><br>
+        {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
