--- a/templates/tricks/_form.html.twig
+++ b/templates/tricks/_form.html.twig
@@ -1,4 +1,31 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div>
+        {{ form_row(form.nom, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <div>
+        {{ form_row(form.description, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <div>
+        {{ form_row(form.image, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <div>
+        {{ form_row(form.video, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <div>
+        {{ form_row(form.categorie, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <br>
+    <button class="btn btn-outline-success">{{ button_label|default('Enregistrer') }}</button>
+    <br>
+    <br>
 {{ form_end(form) }}
