--- a/templates/tricks/show.html.twig
+++ b/templates/tricks/show.html.twig
@@ -31,9 +31,10 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_tricks_index') }}">back to list</a>
+    <a class="btn btn-outline-secondary "href="{{ path('app_tricks_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_tricks_edit', {'id': trick.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_tricks_edit', {'id': trick.id}) }}">Modifier</a>
 
-    {{ include('tricks/_delete_form.html.twig') }}
+    <a {{ include('tricks/_delete_form.html.twig') }}</a>
+    <br><br>
 {% endblock %}
