--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,28 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form) }} 
+        <div>
+        {{ form_row(form.nom, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>  
+    <br>  
+    <div>
+        {{ form_row(form.prenom, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>    
+    <br>
+    <div>
+        {{ form_row(form.email, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>  
+    <br>  
+    <div>
+        {{ form_row(form.password, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>
+    <br>
+    <button class="btn btn-outline-success">{{ button_label|default('Enregistrer') }}</button>
+    <br><br>
 {{ form_end(form) }}
