--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,8 +3,9 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
-
+    <br>
+    <h1 class="text-center">User index</h1>
+    <br>
     <table class="table">
         <thead>
             <tr>
@@ -27,8 +28,8 @@
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
                 <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                    <a class="btn btn-outline-primary" href="{{ path('app_user_show', {'id': user.id}) }}">Voir</a>
+                    <a class="btn btn-outline-secondary" href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -39,5 +40,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+    <a class="btn btn-outline-success" href="{{ path('app_user_new') }}">Créer un utilisateur</a>
+    <br><br>
 {% endblock %}
