--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,8 +3,9 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
-
+    <br>
+    <h1 class="text-center">User</h1>
+    <br>
     <table class="table">
         <tbody>
             <tr>
@@ -20,10 +21,6 @@
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
             </tr>
             <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
                 <th>Nom</th>
                 <td>{{ user.nom }}</td>
             </tr>
@@ -34,9 +31,10 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a class="btn btn-outline-secondary" href="{{ path('app_user_index') }}">Retour à laliste</a>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+    <a{{ include('user/_delete_form.html.twig') }}</a>
+    <br><br>
 {% endblock %}
