--- a/templates/commentaire/_form.html.twig
+++ b/templates/commentaire/_form.html.twig
@@ -1,4 +1,9 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+            <div>
+        {{ form_row(form.commentaire, {
+            'attr':{'class':'form-control'}
+        }) }}
+    </div>  
+
     <button class="btn btn-outline-success">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
