--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <!-- Header-->
-<header class="bg-dark py-5" style="background-image: url(" asset{{'public/image/home.jpg'}}")">
+<header class="masthead">
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-6">
