page presentation figure

--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -22,7 +22,8 @@
                 <td>{{ trick.id }}</td>
                 <td>{{ trick.nom }}</td>
                 <td>{{ trick.description }}</td>
-                <td><img src="{{ asset('uploads/brochures/' ~ trick.image) }}"
+                <td><img src="{{ asset('uploads/brochures/' ~ trick.image) }} "
+                        width="100" heigth="100"
                         alt="Grapefruit slice atop a pile of other slices"></td>
                 <td>{{ trick.video }}</td>
                 <td>
