--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,34 +13,39 @@
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-    <div class="container">
-    <br>
-    <h1 class="h3 mb-3 font-weight-normal text-center">Heureux de vous revoir</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <br>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}">
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+    <section class="gradient-custom">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                        <div class="card-body p-5 text-center">
+                            <div class="mb-md-5 mt-md-4 pb-5">
+                                <h2 class="fw-bold mb-2 text-uppercase">Heureux de vous revoir</h2>
+                                <p class="text-white-50 mb-5">Entrées vos identifiants!</p>
+                                <div class="form-outline form-white mb-4">
+                                    <label for="inputEmail">Email</label>
+                                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                                </div>
+                                <div class="form-outline form-white mb-4">
+                                    <label for="inputPassword">Mot de passe</label>
+                                    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                                </div>
+                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                <p class="small mb-5 pb-lg-2"><a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié !</a></p>
+                                <button class="btn btn-outline-light btn-lg px-5" type="submit">Se connecter</button>
+                                <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                                    <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                                    <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                                    <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+                                </div>
+                            </div>
+                        <div>
+                            <p class="mb-0">Pas encore de compte? <a href="{{ path('app_register') }}" class="text-white-50 fw-bold">S'inscrire</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    #}
-    <br>
-    <button class="btn btn-lg btn-primary" type="submit">
-        Se connecter
-    </button>
+    </section>
 </form>
-<br><br>
-<p><a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié !</a></p>
-</div>
 {% endblock %}
