mise en forme des pages

--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <br>
-    <div class="container">
+    <div class="container vh-100">
     <br>
         <h1 class="text-center">Créer une nouvelle Catégorie</h1>
 
