--- a/templates/commentaire/edit.html.twig
+++ b/templates/commentaire/edit.html.twig
@@ -3,11 +3,16 @@
 {% block title %}Edit Commentaire{% endblock %}
 
 {% block body %}
-    <h1>Edit Commentaire</h1>
-
-    {{ include('commentaire/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_commentaire_index') }}">back to list</a>
-
-    {{ include('commentaire/_delete_form.html.twig') }}
+    <div class="container vh-100">
+        <br><br>
+        <h1 class="text-center">Edit Commentaire</h1>
+        <br><br>
+        {{ include('commentaire/_form.html.twig', {'button_label': 'Modifier',
+                'button_class': 'btn btn-success'}) }}
+        <br>
+        <a class="btn btn-outline-secondary" href="{{ path('app_commentaire_index') }}">Retour à liste</a>
+        
+        <a {{ include('commentaire/_delete_form.html.twig') }}</a>
+        <br><br>
+    </div>
 {% endblock %}
