--- a/templates/commentaire/new.html.twig
+++ b/templates/commentaire/new.html.twig
@@ -3,9 +3,13 @@
 {% block title %}New Commentaire{% endblock %}
 
 {% block body %}
-    <h1>Create new Commentaire</h1>
+    <br>
+    <div class="container vh-100">
+    <br>
+        <h1 class="text-center">Create new Commentaire</h1>
 
-    {{ include('commentaire/_form.html.twig') }}
-
-    <a href="{{ path('app_commentaire_index') }}">back to list</a>
+        {{ include('commentaire/_form.html.twig') }}
+        <br>
+        <a class="btn btn-outline-secondary" href="{{ path('app_commentaire_index') }}">Retour à la liste</a>
+    </div>
 {% endblock %}
