--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Categorie{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container vh-100">
         <br>
         <h1 class="text-center">Modifier la Catégorie</h1>
 
