--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -3,36 +3,38 @@
 {% block title %}Categorie index{% endblock %}
 
 {% block body %}
-    <br>
-    <h1 class="text-center">Categorie index</h1>
-    <br>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Libelle</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for categorie in categories %}
-            <tr>
-                <td>{{ categorie.id }}</td>
-                <td>{{ categorie.libelle }}</td>
-                <td>
-                    <a class="btn btn-outline-primary" href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Voir</a>
-                    <a class="btn btn-outline-secondary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a class="btn btn-outline-success" href="{{ path('app_categorie_new') }}">Créer une nouvelle catégorie</a>
-    <br><br>
+    <div class="container">
+        <br>
+        <h1 class="text-center">Categorie index</h1>
+        <br>
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Libelle</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for categorie in categories %}
+                <tr>
+                    <td>{{ categorie.id }}</td>
+                    <td>{{ categorie.libelle }}</td>
+                    <td>
+                        <a class="btn btn-outline-primary" href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Voir</a>
+                        <a class="btn btn-outline-secondary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <a class="btn btn-outline-success" href="{{ path('app_categorie_new') }}">Créer une nouvelle catégorie</a>
+        </div>
+        <br><br>
+    </div>
 {% endblock %}
