--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -3,25 +3,28 @@
 {% block title %}Categorie{% endblock %}
 
 {% block body %}
-    <h1>Categorie</h1>
+    <div class="container vh-100">
+        <br><br>
+        <h1 class="text-center">Categorie</h1>
+        <br><br>
+        <table class="table table-striped table-hover">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ categorie.id }}</td>
+                </tr>
+                <tr>
+                    <th>Libelle</th>
+                    <td>{{ categorie.libelle }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <br><br>
+        <a class="btn btn-outline-secondary" href="{{ path('app_categorie_index') }}">Retour à la liste</a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ categorie.id }}</td>
-            </tr>
-            <tr>
-                <th>Libelle</th>
-                <td>{{ categorie.libelle }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <a class="btn btn-outline-primary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 
-    <a class="btn btn-outline-secondary" href="{{ path('app_categorie_index') }}">Retour à la liste</a>
-
-    <a class="btn btn-outline-primary" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
-
-    <a{{ include('categorie/_delete_form.html.twig') }}</a>
-    <br><br>
+        <a{{ include('categorie/_delete_form.html.twig') }}</a>
+        <br><br>
+    </div>
 {% endblock %}
