--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Commentaire index{% endblock %}
 
 {% block body %}
+<div class="container">
     <br>
     <h1 class="text-center">Commentaire index</h1>
 
-    <table class="table">
+        <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>Id</th>
@@ -33,7 +34,9 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a class="btn btn-outline-success" href="{{ path('app_commentaire_new') }}">Create new</a>
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <a class="btn btn-outline-success" href="{{ path('app_commentaire_new') }}">Create new</a>
+    </div>
     <br><br>
+</div>
 {% endblock %}
