--- a/templates/commentaire/show.html.twig
+++ b/templates/commentaire/show.html.twig
@@ -3,28 +3,32 @@
 {% block title %}Commentaire{% endblock %}
 
 {% block body %}
-    <h1>Commentaire</h1>
+    <div class="container vh-100">
+        <br><br>
+        <h1 class="text-center">Commentaire</h1>
+        <br><br>
+        <table class="table table-striped table-hover">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ commentaire.id }}</td>
+                </tr>
+                <tr>
+                    <th>Commentaire</th>
+                    <td>{{ commentaire.commentaire }}</td>
+                </tr>
+                <tr>
+                    <th>Date</th>
+                    <td>{{ commentaire.date ? commentaire.date|date('Y-m-d H:i:s') : '' }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <br><br>
+        <a class="btn btn-outline-secondary" href="{{ path('app_commentaire_index') }}">Retour à la liste</a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ commentaire.id }}</td>
-            </tr>
-            <tr>
-                <th>Commentaire</th>
-                <td>{{ commentaire.commentaire }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ commentaire.date ? commentaire.date|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <a class="btn btn-outline-primary" href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}">Modifier</a>
 
-    <a href="{{ path('app_commentaire_index') }}">back to list</a>
-
-    <a href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}">edit</a>
-
-    {{ include('commentaire/_delete_form.html.twig') }}
+        <a{{ include('commentaire/_delete_form.html.twig') }}</a>
+        <br><br>
+    </div>
 {% endblock %}
