--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -3,42 +3,46 @@
 {% block title %}Tricks index{% endblock %}
 
 {% block body %}
-    <h1>Tricks index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Description</th>
-                <th>Image</th>
-                <th>Video</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for trick in tricks %}
-            <tr>
-                <td>{{ trick.id }}</td>
-                <td>{{ trick.nom }}</td>
-                <td>{{ trick.description }}</td>
-                <td><img src="{{ asset('uploads/brochures/' ~ trick.image) }} "
-                        width="100" heigth="100"
-                        alt="Grapefruit slice atop a pile of other slices"></td>
-                <td>{{ trick.video }}</td>
-                <td>
-                    <a class="btn btn-outline-primary" href="{{ path('app_tricks_show', {'id': trick.id}) }}">Voir</a>
-                    <a class="btn btn-outline-secondary" href="{{ path('app_tricks_edit', {'id': trick.id}) }}">Modifier</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a class="btn btn-outline-primary" href="{{ path('app_tricks_new') }}">Créer un tricks</a>
-    <br><br>
+    <div class="container">
+            <br><br>
+        <h1 class="text-center">Tricks index</h1>
+            <br><br>
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nom</th>
+                    <th>Description</th>
+                    <th>Image</th>
+                    <th>Video</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for trick in tricks %}
+                <tr>
+                    <td>{{ trick.id }}</td>
+                    <td>{{ trick.nom }}</td>
+                    <td>{{ trick.description }}</td>
+                    <td><img src="{{ asset('uploads/brochures/' ~ trick.image) }} "
+                            width="100" heigth="100"
+                            alt="Grapefruit slice atop a pile of other slices"></td>
+                    <td>{{ trick.video }}</td>
+                    <td>
+                        <a class="btn btn-outline-primary" href="{{ path('app_tricks_show', {'id': trick.id}) }}">Voir</a>
+                        <a class="btn btn-outline-secondary" href="{{ path('app_tricks_edit', {'id': trick.id}) }}">Modifier</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="7">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <a class="btn btn-outline-primary" href="{{ path('app_tricks_new') }}">Créer un tricks</a>
+        </div>
+        <br><br>
+    </div>
 {% endblock %}
