--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,10 +3,11 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
+<div class="container vh-100">
     <br>
     <h1 class="text-center">User</h1>
     <br>
-    <table class="table">
+        <table class="table table-striped table-hover">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -37,4 +38,5 @@
 
     <a{{ include('user/_delete_form.html.twig') }}</a>
     <br><br>
+</div>
 {% endblock %}
