--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,14 +18,16 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar bg-ligth">
             <div class="container px-5">
                 <a class="navbar-brand" href="/">Snowtricks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href= "{{ path('app_user_index')}}">User</a></li>
                         <li class="nav-item"><a class="nav-link" href= "{{ path('app_tricks_index')}}">Tricks</a></li>
+                        <li class="nav-item"><a class="nav-link" href= "{{ path('app_categorie_index')}}">Categorie</a></li>
                         <li class="nav-item"><a class="nav-link" href= "{{ path('app_logout')}}">Déconnexion</a></li>
                         <li class="nav-item"><a class="nav-link" href= "{{ path('app_login')}}">Connexion</a></li>
                         <li class="nav-item"><a class="nav-link" href= "{{ path('app_register')}}">Inscription</a></li>
@@ -36,8 +38,8 @@
 
         {% block body %}{% endblock %}
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        <footer class="py-5 bg-ligth">
+            <div class="container px-5"><p class="m-0 text-center text-dark">Copyright &copy; Your Website 2023</p></div>
         </footer>
         <!-- choose one -->
         <script src="https://unpkg.com/feather-icons"></script>
