--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -11,11 +11,9 @@
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Email</th>
-                    <th>Roles</th>
-                    <th>Password</th>
                     <th>Nom</th>
-                    <th>Prenom</th>
+                    <th>Prenom</th>                    <th>Email</th>
+                    <th>Roles</th>
                     <th>actions</th>
                 </tr>
             </thead>
@@ -23,11 +21,9 @@
             {% for user in users %}
                 <tr>
                     <td>{{ user.id }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                    <td>{{ user.password }}</td>
                     <td>{{ user.nom }}</td>
-                    <td>{{ user.prenom }}</td>
+                    <td>{{ user.prenom }}</td>                    <td>{{ user.email }}</td>
+                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                     <td>
                         <a class="btn btn-outline-primary" href="{{ path('app_user_show', {'id': user.id}) }}">Voir</a>
                         <a class="btn btn-outline-secondary" href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier</a>
